smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/control/control-statement-before-others.smithy
// Syntax error at line 4, column 1: Expected IDENTIFIER but found DOLLAR('$') | Model
namespace foo.baz

$version: "2.0"
